--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "redux-mock-store": "1.5.3",
     "replace": "1.2.2",
     "rimraf": "3.0.0",
-    "sass-loader": "10.4.1",
+    "sass": "^1.56.1",
+    "sass-loader": "^10.4.1",
     "style-loader": "1.0.0",
     "url-loader": "2.2.0",
     "webpack": "5.75.0",
