--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-react": "7.16.0",
     "eslint-watch": "6.0.1",
-    "file-loader": "4.2.0",
+    "file-loader": "^4.2.0",
     "hard-source-webpack-plugin": "0.13.1",
     "history": "4.10.1",
     "html-webpack-plugin": "5.5.0",
