--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-redux": "7.1.1",
-    "react-router-dom": "5.1.2",
+    "react-router-dom": "6.6.2",
     "redux": "4.0.4",
     "redux-thunk": "2.3.0"
   },
@@ -34,12 +34,12 @@
     "babel-jest": "24.9.0",
     "babel-loader": "8.0.6",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
-    "browser-sync": "2.27.10",
+    "browser-sync": "2.27.11",
     "chalk": "2.4.2",
     "concurrently": "5.3.0",
     "connect-history-api-fallback": "1.6.0",
     "coveralls": "3.0.7",
-    "css-loader": "3.2.0",
+    "css-loader": "6.7.3",
     "cssnano": "5.1.14",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.15.1",
@@ -47,7 +47,7 @@
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-react": "7.16.0",
     "eslint-watch": "6.0.1",
-    "file-loader": "^4.2.0",
+    "file-loader": "^6.2.0",
     "hard-source-webpack-plugin": "0.13.1",
     "history": "4.10.1",
     "html-webpack-plugin": "5.5.0",
@@ -55,7 +55,7 @@
     "jest": "29.3.1",
     "jest-cli": "29.3.1",
     "json-loader": "0.5.7",
-    "mini-css-extract-plugin": "0.8.0",
+    "mini-css-extract-plugin": "2.7.2",
     "mockdate": "2.0.5",
     "node-sass": "8.0.0",
     "open-cli": "7.1.0",
@@ -71,12 +71,12 @@
     "rimraf": "3.0.0",
     "sass": "^1.56.1",
     "sass-loader": "^10.4.1",
-    "style-loader": "1.0.0",
-    "url-loader": "2.2.0",
+    "style-loader": "3.3.1",
+    "url-loader": "4.1.1",
     "webpack": "5.75.0",
     "webpack-bundle-analyzer": "4.7.0",
     "webpack-cli": "^5.0.0",
-    "webpack-dev-middleware": "3.7.2",
+    "webpack-dev-middleware": "6.0.1",
     "webpack-dev-server": "^4.11.1",
     "webpack-hot-middleware": "2.25.3"
   },
@@ -104,7 +104,12 @@
     "env": {
       "development": {
         "presets": [
-          "@babel/preset-env",
+          [
+            "@babel/preset-env",
+            {
+              "modules": false
+            }
+          ],
           "@babel/preset-react"
         ],
         "plugins": [
@@ -115,7 +120,12 @@
       },
       "production": {
         "presets": [
-          "@babel/preset-env",
+          [
+            "@babel/preset-env",
+            {
+              "modules": false
+            }
+          ],
           "@babel/preset-react"
         ],
         "plugins": [
